--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
 
   <depend>rclpy</depend>
   <depend>custom_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <export>
     <build_type>ament_python</build_type>
